# standard-cpp-cmake-tests-template

./: .gitignore  CMakeLists.txt  Makefile  README.md
headers/: anotherRandom.hpp  random.hpp  someClass.hpp
source/: anotherRandom.cpp  main.cpp  random.cpp  someClass.cpp
tests/: anotherRandom.ut.cpp  random.ut.cpp  someClass.ut.cpp
